--- a/vignettes/adiele.Rmd
+++ b/vignettes/adiele.Rmd
@@ -20,13 +20,18 @@ library(LINTULcassava)
 #parameters defined by Ezui et al. and estimated by Adiele et al. EJA 2021
 crop <- LC_crop("Adiele")
 
-x <- expand.grid(IRRI=c(TRUE, FALSE), site=c("Edo", "CRS", "Benue"), year = c(2016, 2017), stringsAsFactors=FALSE)
+#model run combinations
+x <- expand.grid(IRRI=c(TRUE, FALSE), site=c("Edo", "CRS", "Benue"), 
+                 year = c(2016, 2017), stringsAsFactors=FALSE)
 
 mod <- lapply(1:nrow(x), function(i)  {
-	  p <- Adiele(x$site[i], x$year[i])
-	  data.frame(Location=x$site[i], LINTCAS(p$weather, crop, p$soil, p$management, control=c(p$control, IRRIGF=x$IRRI[i])))
-})
-names(mod) <- apply(x, 1, function(i) paste0(c(ifelse(i[1], "pot", "wlim"), i[2:3]), collapse="_"))
+    p <- Adiele(x$site[i], x$year[i])
+    data.frame(Location=x$site[i], 
+      LINTCAS(p$weather, crop, p$soil, p$management, 
+              control=c(p$control, IRRIGF=x$IRRI[i])))
+  })
+names(mod) <- apply(x, 1, function(i) 
+              paste0(c(ifelse(i[1], "pot", "wlim"), i[2:3]), collapse="_"))
 ```
 
 
